[package]
name = "http-datafusion"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = "43.0.0"
serde = { version = "1.0.132", features = ["derive"] }  # For JSON parsing and serialization
serde_json = "1.0"           # For handling JSON data
tokio = { version = "1", features = ["full"] } # For async runtime
reqwest = { version = "0.11", features = ["json","blocking"] } # For making HTTP requests and handling JSON
futures = "0.3"             # For working with async streams
async-trait = "0.1"          # For async methods in trait implementations
arrow = "36.0.0"            # Apache Arrow support for columnar data
datafusion-expr = "43.0.0"
anyhow = "1.0.93"
serde_yaml = "0.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"

